// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Applications index test snapshots loading 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 svg {
  height: 24px;
  width: 24px;
}

.c8 svg path.path-fill,
.c8 svg line.path-fill,
.c8 svg polygon.path-fill,
.c8 svg rect.path-fill,
.c8 svg circle.path-fill,
.c8 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c8 svg path.stroke-fill,
.c8 svg line.stroke-fill,
.c8 svg polygon.stroke-fill,
.c8 svg rect.stroke-fill,
.c8 svg circle.stroke-fill,
.c8 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c8 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c8.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c8 img {
  width: 24px;
}

.c7 {
  height: 40px;
  width: 40px;
}

.c7.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c7.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c0 {
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

.c4 {
  font-size: 20px;
  height: 32px;
}

.c6 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c6 .labelLink {
  color: #1a1a1a;
  fontWeight: 700;
  marginRight: 8px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: inherit;
  font-size: 20px;
  height: 60px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c2 .MuiListItemIcon-root {
  min-width: 30px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2 count-header"
    >
      <div
        class="c3 c4 test-id-breadcrumbs"
      >
        <div
          class="c5"
        >
          <span
            class="c6 labelLink"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class=""
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c7"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c5 c8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-14"
    >
      <div
        class="c9"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Applications index test snapshots success 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 svg {
  height: 24px;
  width: 24px;
}

.c8 svg path.path-fill,
.c8 svg line.path-fill,
.c8 svg polygon.path-fill,
.c8 svg rect.path-fill,
.c8 svg circle.path-fill,
.c8 svg polyline.path-fill {
  fill: !important;
  -webkit-transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: fill 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c8 svg path.stroke-fill,
.c8 svg line.stroke-fill,
.c8 svg polygon.stroke-fill,
.c8 svg rect.stroke-fill,
.c8 svg circle.stroke-fill,
.c8 svg polyline.stroke-fill {
  stroke: !important;
  -webkit-transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: stroke 200ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c8 svg rect.rect-height {
  height: 24px;
  width: 24px;
}

.c8.downward {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c8.upward {
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

.c8 img {
  width: 24px;
}

.c7 {
  height: 40px;
  width: 40px;
}

.c7.MuiIconButton-root {
  background-color: #F6F7F9;
  color: #737373;
}

.c7.MuiIconButton-root:hover {
  background-color: #fff;
  color: #009CCC;
}

.c0 {
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

.c4 {
  font-size: 20px;
  height: 32px;
}

.c6 {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  max-width: 300px;
}

.c6 .labelLink {
  color: #1a1a1a;
  fontWeight: 700;
  marginRight: 8px;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: inherit;
  font-size: 20px;
  height: 60px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 12px 0 24px;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
  background: inherit;
}

.c2 .MuiListItemIcon-root {
  min-width: 30px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2 count-header"
    >
      <div
        class="c3 c4 test-id-breadcrumbs"
      >
        <div
          class="c5"
        >
          <span
            class="c6 labelLink"
            title="Applications"
          >
            Applications
          </span>
        </div>
      </div>
      <div
        class=""
      >
        <button
          aria-haspopup="true"
          class="MuiButtonBase-root MuiIconButton-root c7"
          tabindex="0"
          title="Account settings"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <div
              class="c5 c8"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-27"
    >
      <div
        class="c9"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
